# i3dr_vapp_control_ros

./: CMakeLists.txt  package.xml
config/urdf/: ur10_robotiq_2f_85.xacro  ur10_robotiq_2f_85_g.xacro
launch/: i3dr_vapp_moveit.launch  ur10_bringup.launch  ur10_moveit_planning_execution.launch  ur10_upload.launch
